
New user-visible features
-------------------------
- (buildings) A new position allocator has been added to the buildings module.
  The allocator places nodes randomly but in a manner that rejects positions
  that are located within buildings defined in the scenario.
- (tcp) Added PRR as recovery algorithm
- (wifi) Add a new trace source to StaWifiMac to trace beacon arrivals

Bugs fixed
----------
- Bug 2914 - Adv Win resilience to SequenceNumber wrap-around
- Bug 2921 - tcp: Add min_cwnd variable to LEDBAT
- Bug 2911 - aodv:  Binary exponential backoff can become unlimited
- Bug 2901 - Add CommandLine::Parse (const std::vector<std::string>> args)
- Bug 2891 - netanim:  dumbbell-animation breaks when RightCount > LeftCount
- Bug 2451 - bindings: (partial fix) generating ILP32 bindings from LP64
- Bug 2461 - CommandLine should handle non-option arguments
- Bug 2801 - FdNetDevice device MTU is not set correctly
- Bug 2819 - FqCoDel handling of non-IP packets
- Bug 2920 - wifi: Default MaxSlrc and fragmentation threshold values differ from standard
- Bug 2924 - documentation about Peek/Dequeue usage
- Bug 2925 - wifi: MinstrelHt provides strange results at low SNR with A-MPDU enabled
- Bug 2926 - wifi: SSRC and SLRC mechanism not fully aligned to the standard
- Bug 2931 - Queue Disc drops the CE marked packets
- Bug 2941 - wifi: Order bit of Frame control field of WifiMacHeader not correctly set for some frames
- Bug 2948 - network: SetPriority does not support value 7
- Bug 2964 - wifi: IdealWifiManager keeps using the same MCS when all transmissions fail

Known issues
------------
In general, known issues are tracked on the project tracker available
at http://www.nsnam.org/bugzilla/

Release 3.28
============

Availability
------------
This release is available from:
https://www.nsnam.org/release/ns-allinone-3.28.tar.bz2

Supported platforms
-------------------
This release is intended to work on systems with the following minimal