@@ -63,6 +63,7 @@ nodes to be placed outside of buildings defined in the scenario.</li>
     hash of various fields of the packet header (depending on the packet type).</li>
   <li> Added a priority queue disc (PrioQueueDisc).</li>
   <li> Added a new trace source in StaWifiMac for tracing beacon arrivals</li>
+  <li> Added a new helper method to ApplicationContainer to start applications with some jitter around the start time</li>
 </ul>
 <h2>Changes to existing API:</h2>
 <ul>
